插件HTML,JS,Android,iOS,文档完成

--- a/Document/Plugin/PGLogin/Html/index.html
+++ b/Document/Plugin/PGLogin/Html/index.html
@@ -171,7 +171,7 @@ li:active {
 					<div class="chs">App升级测试</div>
 				</span>
 			</li>
-			<li id="plus/pluginLogin.html" onclick="clicked(this.id)">
+			<li id="plus/plugin/pluginLogin.html" onclick="clicked(this.id)">
 				<span class="item">Plugin
 					<div class="chs">扩展插件测试</div>
 				</span>
